--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
                 <td th:text="${employee.lastName}"></td>
                 <td th:text="${employee.email}"></td>
                 <td><a th:href="@{/showFormForUpdate/{id}(id=${employee.id})}" class="btn btn-primary">Aktualizovať</a>
-                    <a class="btn btn-danger" th:attr="onclick=|openPopup('${employee.id}')|">Odstrániť</a>
+                    <a th:href="@{/deleteEmployee/{id}(id=${employee.id})}"class ="btn btn-danger">Delete</a>
                 </td>
             </tr>
         </tbody>
