--- a/src/main/resources/templates/new_employee.html
+++ b/src/main/resources/templates/new_employee.html
@@ -8,6 +8,7 @@
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
 </head>
+</tr>
 <body>
 <div class="container">
     <h1>Employee Management System</h1>
@@ -15,14 +16,19 @@
     <h2>Save Employee</h2>
 
     <form action="#" th:action="@{/saveEmployee}" th:object="${employee}" method="POST">
+
+        <th> Krstné meno zamestnanca</th>
         <input type="text" th:field="*{firstName}"
                placeholder="Employee First Name" class="form-control mb-4 col-4">
-
+        <th> Priezvisko zamestnanca</th>
         <input type="text" th:field="*{lastName}"
                placeholder="Employee Last Name" class="form-control mb-4 col-4">
-
+        <th> Email zamestnanca</th>
         <input type="text" th:field="*{email}"
                placeholder="Employee Email" class="form-control mb-4 col-4">
+        <th> Email zamestnanca</th>
+        <input type="text" th:field="*{email}"
+               placeholder="Employee Employer" class="form-control mb-4 col-4">
 
         <button type="submit" class="btn btn-info col-2"> Save Employee</button>
     </form>
