--- a/src/main/resources/templates/update_employee.html
+++ b/src/main/resources/templates/update_employee.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
     <title>Employee Management System</title>
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -18,12 +18,14 @@
 
         <!-- Add hidden form field to handle update -->
         <input th:field="*{id}" type="hidden"/>
-
+        <th> Krstné meno zamestnanca</th>
         <input class="form-control mb-4 col-4" th:field="*{firstName}" type="text">
-
+        <th> Priezvisko zamestnanca</th>
         <input class="form-control mb-4 col-4" th:field="*{lastName}" type="text">
-
+        <th> Email zamestnanca</th>
         <input class="form-control mb-4 col-4" th:field="*{email}" type="text">
+        <th> Zamestnávateľ </th>
+        <input class="form-control mb-4 col-4" th:field="*{employer}" type="text">
 
         </select>
 
