--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,6 @@
           href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lumen/bootstrap.min.css"
           integrity="sha384-GzaBcW6yPIfhF+6VpKMjxbTx6tvR/yRd/yJub90CqoIn2Tz4rRXlSpTFYMKHCifX" crossorigin="anonymous">
 
-
 <script>
     function openPopup(id){
         let confirmAction = confirm("Are you sure to delete this employee?");
@@ -18,18 +17,18 @@
 </script>
 </head>
 <body>
-    <div class="container my-2">
-        <h1>Zoznam všetkých zamestnancov</h1>
+    <div class="container">
+        <h1>List of all employees</h1>
         <a th:href="@{/showNewEmployeeForm}" button type="button" class="btn btn-info"> Add employee </a>
         <a th:href="@{/showNewCompanyForm}" button type="button" class="btn btn-info"> Add company </a>
-        <table border="1" class="table table-striped table-responsive-md">
+        <table border="2" class="table table-striped">
             <thead>
             <tr>
                 <th> Academic Degree </th>
                 <th> First Name </th>
                 <th> Last Name </th>
                 <th> Postgraduate Degree </th>
-                <th> Workplace </th>
+                <th> Company </th>
                 <th> Work Position</th>
                 <th> Age </th>
                 <th> Recruitment from  </th>
@@ -43,7 +42,6 @@
                 <td th:text="${employee.firstName}"></td>
                 <td th:text="${employee.lastName}"></td>
                 <td th:text="${employee.postgraduateDegree}"></td>
-                <td th:text="${employee.workplace.name}"></td>
                 <td th:text="${employee.workPosition}"></td>
                 <td th:text="${employee.age}"></td>
                 <td th:text="${#dates.format(employee.recruitment, 'dd-MM-yyyy')}"></td>
