--- a/src/main/resources/templates/new_company.html
+++ b/src/main/resources/templates/new_company.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Employee Management System</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lumen/bootstrap.min.css"
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lumen/bootstrap.min.css"
               integrity="sha384-GzaBcW6yPIfhF+6VpKMjxbTx6tvR/yRd/yJub90CqoIn2Tz4rRXlSpTFYMKHCifX" crossorigin="anonymous">
 </head>
 <body>
@@ -12,11 +13,11 @@
   <hr>
   <h2>Nové pracovisko</h2>
 
-  <form action="#" th:action="@{/saveWorkplace}" th:object="${workplace}"
+  <form action="#" th:action="@{/saveCompany}" th:object="${company}"
         method="POST">
     <input type="text" th:field="*{name}"
-           placeholder="Názov pracoviska" class="form-control mb-4 col-4">
-    <button type="submit" class="btn btn-info col-2">Ulož pracovisko</button>
+           placeholder="Názov firmy" class="form-control mb-4 col-4">
+    <button type="submit" class="btn btn-info col-2">Ulož firmu</button>
   </form>
   <hr>
   <a class="text-danger" th:href = "@{/}"> Návrat na zoznam zamestnancov</a>
