--- a/src/main/resources/templates/new_employee.html
+++ b/src/main/resources/templates/new_employee.html
@@ -16,19 +16,14 @@
     <h2>Save Employee</h2>
 
     <form action="#" th:action="@{/saveEmployee}" th:object="${employee}" method="POST">
-
-        <th> Krstné meno zamestnanca</th>
-        <input type="text" th:field="*{firstName}"
-               placeholder="Employee First Name" class="form-control mb-4 col-4">
-        <th> Priezvisko zamestnanca</th>
-        <input type="text" th:field="*{lastName}"
-               placeholder="Employee Last Name" class="form-control mb-4 col-4">
-        <th> Email zamestnanca</th>
-        <input type="text" th:field="*{email}"
-               placeholder="Employee Email" class="form-control mb-4 col-4">
-        <th> Email zamestnanca</th>
-        <input type="text" th:field="*{email}"
-               placeholder="Employee Employer" class="form-control mb-4 col-4">
+        <input class="form-control mb-4 col-4" th:field="*{academicDegree}" type="text">
+        <input class="form-control mb-4 col-4" th:field="*{lastName}" type="text">
+        <input class="form-control mb-4 col-4" th:field="*{postgraduateDegree}" type="text">
+        <input class="form-control mb-4 col-4" th:field="*{company.name}" type="text">
+        <input class="form-control mb-4 col-4" th:field="*{workPosition}" type="text">
+        <input class="form-control mb-4 col-4" th:field="*{age}" type="text">
+        <input class="form-control mb-4 col-4" th:field="*{recruitment}" type="text">
+        <input class="form-control mb-4 col-4" th:field="*{email}" type="text">
 
         <button type="submit" class="btn btn-info col-2"> Save Employee</button>
     </form>
