--- a/src/main/resources/templates/new_employee.html
+++ b/src/main/resources/templates/new_employee.html
@@ -4,26 +4,40 @@
     <meta charset="UTF-8">
     <title>Employee Management System</title>
     <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
-</head>
+          href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lumen/bootstrap.min.css"
+          integrity="sha384-GzaBcW6yPIfhF+6VpKMjxbTx6tvR/yRd/yJub90CqoIn2Tz4rRXlSpTFYMKHCifX" crossorigin="anonymous">
 </tr>
 <body>
 <div class="container">
     <h1>Employee Management System</h1>
     <hr>
     <h2>Save Employee</h2>
+    <form action="#" th:action="@{/saveEmployee}" th:object="${employee}"
+          method="POST">
 
-    <form action="#" th:action="@{/saveEmployee}" th:object="${employee}" method="POST">
-        <input class="form-control mb-4 col-4" th:field="*{academicDegree}" type="text">
-        <input class="form-control mb-4 col-4" th:field="*{lastName}" type="text">
-        <input class="form-control mb-4 col-4" th:field="*{postgraduateDegree}" type="text">
-        <input class="form-control mb-4 col-4" th:field="*{company.name}" type="text">
-        <input class="form-control mb-4 col-4" th:field="*{workPosition}" type="text">
-        <input class="form-control mb-4 col-4" th:field="*{age}" type="text">
-        <input class="form-control mb-4 col-4" th:field="*{recruitment}" type="text">
-        <input class="form-control mb-4 col-4" th:field="*{email}" type="text">
+    <input th:field="*{id}" type="hidden"/>
+    Titul
+    <input class="form-control mb-4 col-4" th:field="*{academicDegree}" type="text">
+    Meno
+    <input class="form-control mb-4 col-4" th:field="*{firstName}" type="text">
+    Priezvisko
+    <input class="form-control mb-4 col-4" th:field="*{lastName}" type="text">
+    Titul
+    <input class="form-control mb-4 col-4" th:field="*{postgraduateDegree}" type="text">
+
+    <select class="form-control mb-4 col-4" id="exampleSelect1" th:field="*{company.id}">
+        <option value="0">Company</option>
+        <option th:each="com:${companies}" th:value="${co.id}" th:text="${co.name}" >      </option>
+    </select>
+    </select>
+    Pracovná pozícia
+    <input class="form-control mb-4 col-4" th:field="*{workPosition}" type="text">
+    Vek
+    <input class="form-control mb-4 col-4" th:field="*{age}" type="text">
+    Zamestnaný od:
+    <input class="form-control mb-4 col-4" th:field="*{recruitment}" type="date">
+    Email
+    <input class="form-control mb-4 col-4" th:field="*{email}" type="text">
 
         <button type="submit" class="btn btn-info col-2"> Save Employee</button>
     </form>
