--- a/src/main/resources/templates/update_employee.html
+++ b/src/main/resources/templates/update_employee.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Employee Management System</title>
-
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lumen/bootstrap.min.css"
+          integrity="sha384-GzaBcW6yPIfhF+6VpKMjxbTx6tvR/yRd/yJub90CqoIn2Tz4rRXlSpTFYMKHCifX" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
@@ -15,15 +15,31 @@
 
     <form action="#" method="POST" th:action="@{/saveEmployee}" th:object="${employee}">
 
+
         <input th:field="*{id}" type="hidden"/>
+        Titul
         <input class="form-control mb-4 col-4" th:field="*{academicDegree}" type="text">
+        Meno
+        <input class="form-control mb-4 col-4" th:field="*{firstName}" type="text">
+        Priezvisko
         <input class="form-control mb-4 col-4" th:field="*{lastName}" type="text">
+        Titul
         <input class="form-control mb-4 col-4" th:field="*{postgraduateDegree}" type="text">
-        <input class="form-control mb-4 col-4" th:field="*{company.name}" type="text">
+
+        <select class="form-control mb-4 col-4" id="exampleSelect1" th:field="*{company.id}">
+            <option value="0">Company</option>
+            <option th:each="comp:${companies}" th:selected="(${comp.id} == *{company.id})" th:text="${comp.name}"
+                    th:value="${comp.id}"></option>
+        </select>
+        Pracovná pozícia
         <input class="form-control mb-4 col-4" th:field="*{workPosition}" type="text">
+        Vek
         <input class="form-control mb-4 col-4" th:field="*{age}" type="text">
-        <input class="form-control mb-4 col-4" th:field="*{recruitment}" type="text">
+        Zamestnaný od:
+        <input class="form-control mb-4 col-4" th:field="*{recruitment}" type="date">
+        Email
         <input class="form-control mb-4 col-4" th:field="*{email}" type="text">
+
         <button class="btn btn-info col-2" type="submit"> Update Employee</button>
 
     </form>
