New project employee Pridanie mysql do application.properties webova stranka employee
Nefunguje Delete, potrebne
vyriesit
delete porieseny
posledny pokus :(
aplikacia konecne funguje, oprava indexu potrebna
dalsia chyba najdena
konecneeee este vzhlad sa trosku pohrat
Konecneeeee HOTOVO !!!!!!!

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,13 +16,13 @@
 </script>
 </head>
 <body>
-<div class="container text-center">
+<div class="container text-center " style="background-color:cyan">
     <h3>List of all employees</h3>
     <p><em>First project of me!</em></p>
     <p>I hope, that you like it, so i will always make it better!!!!!</p>
 </div>
-        <a th:href="@{/showNewEmployeeForm}" button type="button" class="btn btn-info"> Add employee </a>
-        <a th:href="@{/showNewCompanyForm}" button type="button" class="btn btn-info"> Add company </a>
+        <a th:href="@{/showNewEmployeeForm}" button type="button" class="btn btn-primary active btn-lg"> Add employee </a>
+        <a th:href="@{/showNewCompanyForm}" button type="button" class="btn btn-primary active btn-lg"> Add company </a>
         <table border="2" class="table table-striped">
             <thead>
             <tr>
